Added start of midterm review

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<html><body><pre><a href="./homework01.txt">homework01.txt</a><br/><a href="./homework02.txt">homework02.txt</a><br/><a href="./syllabus.txt">syllabus.txt</a><br/></pre></body></html>
+<html><body><pre><a href="./homework01.txt">homework01.txt</a><br/><a href="./homework02.txt">homework02.txt</a><br/><a href="./midterm-review.txt">midterm-review.txt</a><br/><a href="./syllabus.txt">syllabus.txt</a><br/></pre></body></html>
